# widget-bzvisualizer

./: .gitignore  MANIFEST.in  Procfile  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  widget-bzvisualizer.json
.github/workflows/: heroku_deploy.yml  python-package.yml  python-publish.yml  release_and_publish.yml
example/: bzvisualizer-example.ipynb  example.ipynb  mc3d-10.cif  mc3d-10016.cif
js/: README.md  package.json  webpack.config.js  widget.js
js/css/: brillouin.css
js/lib/: BZVisualizer.js  example.js  extension.js  labplugin.js
src/widget_bzvisualizer/: __init__.py  utils.py
test/: test.py  test_figures.py
widget_bzvisualizer/: __init__.py  _version.py  example.py
