[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-bzvisualizer"
version = "0.2.3"
dependencies = [
  "anywidget~=0.9.3",
  "numpy~=1.21",
  "scipy~=1.10",
  "seekpath~=2.1",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "watchfiles",
  "jupyterlab",
  "ase",
  "bumpver==2023.1129",
]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_bzvisualizer/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_bzvisualizer/static/widget.js"]
skip-if-exists = ["src/widget_bzvisualizer/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.bumpver]
current_version = "v0.2.3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]