[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-bzvisualizer"
description = 'A Jupyter widget to show the Brillouin zone of periodic crystals.'
version = "0.2.7"
dependencies = [
  "anywidget~=0.9.10",
  "numpy~=1.21",
  "scipy~=1.10",
  "seekpath~=2.1",
]
authors = [{ name = "The OSSCAR team" }]
readme = "README.md"
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'brillouin-zone',
  'reciprocal-space',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Framework :: Jupyter',
  'Framework :: Jupyter :: JupyterLab',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
]
license = { file = 'LICENSE.txt' }
requires-python = '>=3.9'

[project.urls]
Home = 'https://www.osscar.org/'
Source = 'https://github.com/osscar-org/widget-bzvisualizer'

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "notebook", "ase", "bumpver>=2023.1129"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_bzvisualizer/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_bzvisualizer/static/widget.js"]
skip-if-exists = ["src/widget_bzvisualizer/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.bumpver]
current_version = "v0.2.7"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]
